--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hei på deg</h1>
+    <h1>Git og Github</h1>
+    <p>Lær git med meg</p>
     <script src="./js/script.js"></script>
 </body>
 </html>
